--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -57,11 +57,11 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
   
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+    - name: Build with Gradle
       env:
         GITHUB_USER: myConsciousness
         GITHUB_DOWNLOAD_PACKAGE_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      run: ./gradlew build
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
